--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-torch
-transformers
-streamlit
-scikit-learn
-datasets
-pandas
-graphviz
+torch==2.0.1
+transformers==4.36.2
+streamlit==1.29.0
+scikit-learn==1.3.2
+datasets==2.14.6
+pandas==2.0.3
+graphviz==0.20.3
+pyarrow==14.0.2
+torchvision==0.15.2
+torchaudio==2.0.2
